# SAE-Guardrails

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: config.yaml  generate.py  prompts.py  utils.py
training/: ablations.py  main.py  mlp_ablations.py  models.py  post_experiments.py  temporal_analysis.py  temporal_dynamics.py  utils.py
